--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
 
     implementation 'com.shuyu:gsyVideoPlayer-java:7.0.2'
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:7.0.2'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
