--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
+        <activity android:name=".view.activity.SearchActivity">
+        </activity>
         <activity
                 android:name=".view.activity.MVPlayActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:screenOrientation="portrait">
-
         </activity>
         <activity android:name=".view.activity.ListDetailActivity">
         </activity>
