--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
             android:name=".BaseApp"
@@ -36,7 +37,7 @@
         <activity android:name=".view.activity.PlayDetailActivity"/>
 
         <service android:name=".service.PlayService"/>
-        <activity android:name=".view.activity.RecentPlayedActivity" />
+        <activity android:name=".view.activity.RecentPlayedActivity"/>
     </application>
 
 </manifest>
