--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,29 +16,52 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
-        <activity android:name=".view.activity.SearchActivity">
+        <activity
+                android:name=".view.activity.SearchActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop">
         </activity>
         <activity
                 android:name=".view.activity.MVPlayActivity"
+                android:launchMode="singleTop"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".view.activity.ListDetailActivity">
+        <activity
+                android:name=".view.activity.ListDetailActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop">
         </activity>
-        <activity android:name=".view.activity.SongListActivity">
+        <activity
+                android:name=".view.activity.SongListActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop">
         </activity>
-        <activity android:name=".view.activity.MainActivity">
+        <activity
+                android:name=".view.activity.MainActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.PlayDetailActivity"/>
+        <activity
+                android:name=".view.activity.PlayDetailActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop"/>
 
         <service android:name=".service.PlayService"/>
-        <activity android:name=".view.activity.RecentPlayedActivity"/>
-        <activity android:name=".view.activity.CollectActivity" />
+
+        <activity
+                android:name=".view.activity.RecentPlayedActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop"/>
+        <activity
+                android:name=".view.activity.CollectActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop"/>
     </application>
 
 </manifest>
