--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ dependencies {
         exclude group: 'stax', module: 'stax-api'
         exclude group: 'stax', module: 'stax'
     }
-
+    implementation 'com.githang:status-bar-compat:0.7'
+    implementation 'com.billy.android:smart-swipe:1.0.6'
     implementation 'com.shuyu:gsyVideoPlayer-java:7.0.2'
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:7.0.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
