--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,11 @@ dependencies {
     implementation 'com.githang:status-bar-compat:0.7'
     implementation 'com.billy.android:smart-swipe:1.0.6'
     implementation 'com.shuyu:gsyVideoPlayer-java:7.0.2'
+
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:7.0.2'
+    //模拟器支持
+    implementation 'com.shuyu:gsyVideoPlayer-x86:7.0.2'
+
     implementation 'org.greenrobot:eventbus:3.1.1'
 
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
