--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -70,4 +69,12 @@ dependencies {
     implementation 'com.shuyu:gsyVideoPlayer-armv7a:7.0.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+
+    def lifecycle_version = "2.3.0"
+    def arch_version = "2.1.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
