--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     apply from: 'versions.gradle'
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.3.5'
     ext.anko_version='0.10.8'
     repositories {
         google()
@@ -10,8 +10,8 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.20"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
